--- a/views/books.html.twig
+++ b/views/books.html.twig
@@ -3,12 +3,13 @@
 
 {% block contents %}
 {% for book in books %}
-<a class="book" href="#">
+<a class="book" href="{{ path('aBook', {id: book.id}) }}">
     {% if book.image %}
         <img src="{{ app.request.basepath }}/uploads/{{ book.image }}_small.jpg" />
     {% endif %}
     <span class="t">{{ book.titre }} </span><br>
     <em>{{ book.auteur }}</em><br/>
+
 </a>
 {% endfor %}
 {% endblock %}
