correction bug avec le tableau d'emprunt + peaufinage

--- a/views/aBook.html.twig
+++ b/views/aBook.html.twig
@@ -13,39 +13,67 @@
 		<h3>{{ aBook.titre }}</h3>
 		<h4><em>Par {{ aBook.auteur }}</em></h4><br/> 
 		<em>{{ aBook.synopsis }}</em><br/>
+	</div>
+	<div class="col-xs-12">
 		{% set counter_exemplaires = 0 %} 
 		{% for exemplaire in exemplaires %}
 		<div>
 			{% set counter_exemplaires = counter_exemplaires + 1 %}
+
 		</div>
-		<div class="row bloc_emprunt">
+		<div class="col-xs-6 bloc_emprunt">
 			<div class="col-xs-12">
 				Exemplaire n°{{ counter_exemplaires }}
 			</div>
 			<div class="col-xs-12">
 				ID de l'exemplaire : {{ exemplaire.id }}
 			</div>
-			<div class="col-xs-12">
-				Etat : Disponible
-			</div>
-			<div class="col-xs-12">
 
-				{% if app.session.get('admin') %}
-				<a href="{{ path('loanABook',  {id: exemplaire.id}) }}" class="btn btn-default">Emprunter</a>
-				<a href="{{ path('returnABook',  {id: exemplaire.id}) }}" class="btn btn-default">Retourner un emprunt</a> 
-				{% endif %}
-			
+			{% if    not emprunts|length < 1 %} 
+			{# on test si le tableau n'est pas vide (a moins d'un résultat en l'occurence) (fix du cas où tous les champs fini sont à 1 #}				
+
+			{% if app.session.get('admin') %}
+			{% for emprunt in emprunts %} 
+			{% if not (emprunt.exemplaire == exemplaire.id) or not (emprunt.exemplaire is defined)  %}
+			{# si l'id de l'exemplaire ne correspond pas à l'id d'un exemplaire emprunté ou que emprunt n'est pas défini (cas ou les livres n'ont pas été empruntés une fois au moins) alors on affiche la possilibité d'emprunter, sinon le livre est emprunté et on désactive la possibilité d'emprunter #}
+			<div class="col-xs-12">Etat : Disponible</div>
+
+			<div class="col-xs-12">
+				<a href="{{ path('loanABook',  {id: exemplaire.id}) }}" class="btn btn-success btn-default">Emprunter</a>
+				<div disabled class="btn btn-default">Retourner un emprunt</div> 
+
 			</div>
+			{% else %}
+
+			<div class="col-xs-12">Etat : Indisponible</div>
+			<div class="col-xs-12">Date de retour prévisionelle : {{ emprunt.fin }}</div>
+
+			<div class="col-xs-12">
+				<div disabled class="btn btn-default">Emprunter</div>
+				<a href="{{ path('returnABook',  {id: exemplaire.id}) }}" class="btn btn-primary btn-default">Retourner un emprunt</a> 
+			</div>
+			{% endif %}
+			{% endfor %}
+
+			{% endif %}
+			{% else %} {# si on rentre bien dans le cas du tableau non défini, on déclare que tous les bouquins sont dispo #}
+			<div class="col-xs-12">Etat : Disponible</div>
+			<div class="col-xs-12">
+				<a href="{{ path('loanABook',  {id: exemplaire.id}) }}" class="btn btn-success btn-default">Emprunter</a>
+				<div disabled class="btn btn-default">Retourner un emprunt</div> 
+
+			</div>	
+			{% endif %}
 		</div>
 
-
-
 		{% endfor %}
-		<p>Nombre d'exemplaires total : {{ counter_exemplaires }}</p>
-		<p>Nombre d'exemplaires disponibles : {{ counter_exemplaires }}</p>
+		<div class="col-xs-6 bloc_emprunt_end">
+
+			<p>Nombre d'exemplaires total : {{ counter_exemplaires }}</p>
+			<p>Nombre d'exemplaires disponibles : {{ counter_exemplaires }}</p>
 
 
-
+		</div>
 	</div>
 
 </div>
